plugins {
    id 'java'
}

group = 'org.jay.daebak'
version = '0.4.3892-UNREALISED'

java {
    toolchain {
        languageVersion.set(JavaLanguageVersion.of(17))
    }
}

tasks.withType(JavaCompile) {
    options.compilerArgs += [
            '--add-exports', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
           //  '--add-opens', 'jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED'
    ]
}

repositories {
    mavenCentral()
    maven {
        url = 'https://repo.papermc.io/repository/maven-public/'
    }
    maven {
        url = 'https://jitpack.io'
    }
}

dependencies {
    implementation 'io.papermc.paper:paper-api:1.20.1-R0.1-SNAPSHOT'
    implementation 'com.google.code.gson:gson:2.11.0'
  //   implementation 'com.github.blackbeard334:jops:master-SNAPSHOT'
}
